# matsuzawa-20260313

./: pyproject.toml
.research/: research_history.json
config/: config.yaml
config/run/: comparative-1-gemini-gsm8k.yaml  comparative-1-gsm8k.yaml  comparative-2-gemini-gsm8k.yaml  comparative-2-gsm8k.yaml  comparative-3-gemini-gsm8k.yaml  proposed-gemini-gsm8k.yaml  proposed-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
